# CleanShare

./: CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  rules.example.yaml
.github/workflows/: release.yml
src/: cleaner.rs  main.rs  rules.rs
