[package]
name = "cleanshare"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
atty = "0.2"
globset = "0.4"
thiserror = "1.0"
percent-encoding = "2.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

